--- a/app/views/tours/show.html.erb
+++ b/app/views/tours/show.html.erb
@@ -5,11 +5,28 @@
 <div class = "comments_container">
   <% if @tour.comments.length > 0 %>
     <h4> Notes: </h4>
-      <ul class="list-group">
+      <ul class="list-group" style="list-style: none;">
         <% @tour.comments.reverse.each do |comment| %>
-          <li class="list-group-item d-flex justify-content-between align-items-center <%="list-group-item-danger" if comment.is_important %>">
-            <%= comment.content %>
-            <%= link_to "X", "/tours/#{@tour.id}/#{comment.id}", class: "badge badge-secondary", method: 'delete', data: { confirm: "Really?" } %>
+          <% user = User.where(["id = ?", "#{comment.user_id}"]) %>
+
+          <li style="margin-bottom: 20px;">
+            <div class="card <%="border-danger" if comment.is_important %> ">
+              <div class="card-header d-flex justify-content-between align-items-center">
+                <div class="comment-signature">
+                  <%= "#{user[0].first_name} #{user[0].last_name} - #{comment.created_at.strftime("%m/%d/%Y at %I:%M%p")}"  %>
+                </div>
+                <div class="comment-delete-button">
+                  <%= link_to "X", "/tours/#{@tour.id}/#{comment.id}", class: "badge badge-secondary", method: 'delete', data: { confirm: "Really?" } %>
+                </div>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <div class="comment-content">
+                    <%= "#{comment.content}"%>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </li>
         <% end %>
       </ul>
@@ -75,6 +92,7 @@
             <li class="list-group-item">Email: <%= reservation.guest.email%></li>
             <li class="list-group-item">Guests: <%= reservation.guest.num_guests(@tour)%></li>
             <li class="list-group-item">Booking: <%= reservation.guest.booked_by(@tour)%></li>
+            <li class="list-group-item">Amount Owed: <%= number_to_currency(reservation.amount_owed, :unit => "$") %></li>
 
             <% if !@tour.is_approved %>
               <li class="list-group-item">
