--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
           <li class="nav-item">
             <%=link_to "Guests", guests_path, { :class=>"nav-link" }%>
           </li>
+          <li class="nav-item">
+            <%=link_to "Groups", groups_path, { :class=>"nav-link" }%>
+          </li>
           <% if is_admin? %>
             <li class="nav-item dropdown">
               <a class="nav-link  dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
