--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -71,7 +71,68 @@
   </div>
 </div>
 
+<div class="guest__upcoming-tours">
+  <h5>Upcoming Tours:</h5>
+
+  <ul class="list-group">
+
+    <% @group.group_tours.each do |reservation| %>
+      <% if reservation.tour && !reservation.tour.is_past? %>
+        <li class="list-group-item">
+          <h4 class="d-flex justify-content-between align-items-center">
+            <%=reservation.tour.location.name + " - " + reservation.tour.formatted_date_short %>
+            <% if reservation.tour.comments.length > 0 %>
+              <span class="badge badge-pill badge-danger" data-toggle="modal" data-target="#reservationNoteModal<%=reservation.id %>">
+                <%= reservation.tour.comments.length %>
+              </span>
+            <% end %>
+          </h4>
+          <ul class="nav">
+            <li class="nav-item">
+              <%= link_to "Tour Page", "/tours/#{reservation.tour.id}", class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Delete Reservation", "/groups/#{@group.id}/remove_tour/#{reservation.tour.id}", class: "nav-link", method: 'delete', data: { confirm: "Really?" } %>
+            </li>
+          </ul>
+        </li>
+      <% end %>
+    <% end %>
+
+  </ul>
+</div>
+
+<div class="guest__past-tours">
+  <h5>Past Tours:</h5>
+
+  <ul class="list-group">
+
+    <% @group.group_tours.each do |reservation| %>
+      <% if reservation.tour && reservation.tour.is_past? %>
+        <li class="list-group-item">
+          <h4 class="d-flex justify-content-between align-items-center">
+            <%=reservation.tour.location.name + " - " + reservation.tour.formatted_date_short%>
+            <% if reservation.tour.comments.length > 0 %>
+              <span class="badge badge-pill badge-danger" data-toggle="modal" data-target="#reservationNoteModal<%=reservation.id %>">
+                <%= reservation.comments.length %>
+              </span>
+            <% end %>
+          </h4>
+          <ul class="nav">
+            <li class="nav-item">
+              <%= link_to "Tour Page", "/tours/#{reservation.tour.id}", class: "nav-link" %>
+            </li>
+          </ul>
+        </li>
+      <% end %>
+    <% end %>
+  </ul>
+</div>
+
+
+
 <div class="guest-container">
+  <h5>Guests:</h5>
   <div class="guest-list">
     <% @group.group_guests.each do |member| %>
       <div class="card">
