--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,6 +111,34 @@ html, body{
 
 .sidebar {
   @include media-breakpoint-down(sm) {
-    // display: none !important;
+    display: block !important;
+    position: absolute;
+    left: -100%;
+    top: 0;
+    z-index: 1000;
+    height: 100%;
+    transition:left .25s linear;
+    .sidebar-toggle{
+      position: absolute;
+      top: 50%;
+      right: -30px;
+      transform: translateY(-50%);
+      transition: right .25s linear;
+      width: 0;
+      height: 0;
+      border-top: 30px solid transparent;
+      border-bottom: 30px solid transparent;
+      border-left: 30px solid green;
+      border-right: none;
+    }
+    &.open{
+      left: 0;
+      .sidebar-toggle{
+        right:0;
+        border-left: none;
+        border-right: 30px solid green;
+      }
+    }
   }
+
 }
