--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,10 +62,11 @@
 
       <div class="container-fluid main-wrapper">
         <div class="row">
-          <nav class="col-md-2 d-none d-md-block sidebar" >
+          <nav class="col-md-2 d-md-block sidebar" >
             <div class="sidebar-sticky">
               <%= yield(:side_bar) %>
             </div>
+            <div class="sidebar-toggle"></div>
           </nav>
           <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
           <%= yield %>
